--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js" integrity="sha512-CNgIRecGo7nphbeZ04Sc13ka07paqdeTu0WR1IM4kNcpmBAUSHSQX0FslNhTDadL4O5SAGapGt4FodqL8My0mA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="main.js"></script>
+    <script src="qrcode.min.js"></script>
+    <link rel="stylesheet" href="css.css">
     <title>Dneif | URL</title>
 </head>
 <body>
-    <div class="menu"></div>
-    <div class="body"></div>
+    <div class="menu hidden">
+        <textarea id="plain-data" type="text" multiple="rows"></textarea>
+        <button onclick="qrCode()">create</button>
+        <div id="qrcode-container"></div>
+    </div>
+    <div class="body hidden">body</div>
 </body>
 </html>
