--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script language="javascript" src="main.js"></script>
     <script language="javascript" src="qrcode.min.js"></script>
     <script language="javascript" src="lz-string.js"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css.css">
     <title>Dneif | URL</title>
 </head>
